--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>computer game</title>
+        <title>FELINEQUEST 2003 DELUXE EDITION</title>
         <link rel = "stylesheet" type = "text/css" href = "style.css" />
         <script src = "scripts.js"></script>
     </head>
